# training-and--reflection

./: CMakeLists.txt  composition.hpp  main.cpp
Qsort_Pool/: threadpool.cpp  threadpool.hpp
ThreadPool/: blockedqueue.hpp  headers.hpp  requesthandler.cpp  requesthandler.hpp  threadpool.cpp  threadpool.hpp
func_ptr/: func_ptr.cpp  func_ptr.hpp
inheritance/: example_inheritance.hpp
main_arg/: main.cpp
mylib/: CMakeLists.txt  mylib.cpp  mylib.hpp  test.cpp
new_lib/: CMakeLists.txt  new_lib.cpp  new_lib.hpp
read_write_file/CPP/: read_write.cpp
read_write_file/headers/: read_write_file.hpp
struct/: confic.txt  str.txt  struct.hpp
system/: log_emp.hpp
